package pt.isel.keepmyplanet.domain.src

enum class EventStatus {
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
