package pt.isel.keepmyplanet.domain.src

enum class ZoneStatus {
    REPORTED,
    CLEANING_SCHEDULED,
    CLEANED
}