package pt.isel.keepmyplanet.domain.zone

enum class ZoneSeverity {
    UNKNOWN,
    LOW,
    MEDIUM,
    HIGH,
}
