@startuml

enum EventStatus {
  PLANNED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum ZoneStatus {
  REPORTED
  CLEANING_SCHEDULED
  CLEANED
}

enum ZoneSeverity {
    UNKNOWN
    LOW
    MEDIUM
    HIGH
}

class User {
  name: Name
  email: Email
  password: Password
}

class Zone {
  description: Description
  'area: Location
  reported: Date
  photos: List<Photo>
}

class Event {
  title: Title
  description: Description
  'period: Period
}

class Message {
  chatPosition: Int
  content: MessageContent
  timestamp: DateTime
}

class EventStateChange {
  changeTime: DateTime
}

class Location {
  latitude: Double
  longitude: Double
}

class Period {
  start: DateTime
  end: DateTime?
}

User <- Event : organizer
User <- Zone : reporter
User <- Message : sender
User "*" -- "*" Event : participants <

Event "*" --* Zone : events
Event *-- "*" Message : messages
Event -> EventStatus : status

EventStateChange --* Event : statusHistory
EventStateChange --> EventStatus : new
EventStateChange --> User : changedBy

Zone -up-> ZoneStatus : status
Zone -left-> ZoneSeverity : severity
Zone -right[hidden]-> Message : "                         "
Event --> Period : period
Zone --> Location : area
hide empty members

@enduml